--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "default": "index.html",
   "dependencies": {
+    "fractional": "^1.0.0",
     "parcel": "^2.12.0",
     "sass": "^1.77.3"
   },
